--- a/code/index.html
+++ b/code/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello PHP!</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <header>
-      <img width="800px" height="500px" src="images/surface.jpg" alt="Surface"/>
-      <h1>What is Lorem Ipsum?</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/page2.html">Page 2</a></li>
-      </ul>
-    </nav>
-    <main>
-        <article>
-          <h2>Sub heading 1</h2>
-          <p>Lorem Ipsum is simply <strong>dummy</strong> text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-          <h2>Sub heading 2</h2>
-          <p>It was popularised in the <em>1960s</em> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-          <p>áñ</p>
-      </article>
-      <ul>
-          <li>Koti</li>
-          <li>Binary Cipher</li>
-          <li>Better Life Sailor</li>
-        </ul>
-      </main>
-      <aside>
-        <ol start=" 3">
-          <li>Koti
-            <ol>
-              <li>Java</li>
-              <li>PHP</li>
-              <li>React</li>
-            </ol>
-          </li>
-          <li>Binary Cipher</li>
-          <li>Better Life Sailor</li>
+
+<head>
+  <title>Hello PHP!</title>
+  <meta charset="utf-8">
+</head>
+
+<body>
+  <header>
+    <img width="800px" height="500px" src="images/surface.jpg" alt="Surface" />
+    <h1>What is Lorem Ipsum?</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/page2.html">Page 2</a></li>
+    </ul>
+  </nav>
+  <main>
+    <article>
+      <h2>Sub heading 1</h2>
+      <p>Lorem Ipsum is simply <strong>dummy</strong> text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+      <h2>Sub heading 2</h2>
+      <p>It was popularised in the <em>1960s</em> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <p>áñ</p>
+    </article>
+    <ul>
+      <li>Koti</li>
+      <li>Binary Cipher</li>
+      <li>Better Life Sailor</li>
+    </ul>
+  </main>
+  <aside>
+    <ol start=" 3">
+      <li>Koti
+        <ol>
+          <li>Java</li>
+          <li>PHP</li>
+          <li>React</li>
         </ol>
-        <p>Here is another <a href="page2.html">new Page</a></p>
-      </aside>
-      <footer>© 1993-2022 License, Legal Line</footer>
-  </body>
+      </li>
+      <li>Binary Cipher</li>
+      <li>Better Life Sailor</li>
+    </ol>
+    <p>Here is another <a href="page2.html">new Page</a></p>
+  </aside>
+  <footer>© 1993-2022 License, Legal Line</footer>
+</body>
+
 </html>
